# glmmd

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
3rd/glm/: CMakeLists.txt
apps/: CMakeLists.txt
apps/ImGuiFileDialog/: CMakeLists.txt
apps/chat/: CMakeLists.txt  ChatSession.cpp  ChatSession.h  Context.cpp  Context.h  IdleAnimator.cpp  IdleAnimator.h  VisemeMotion.cpp  VisemeMotion.h  main.cpp
apps/chat/assets/: LLM.py  LLM_local.py  TTS.py  config.json  ssml.xml
apps/libs/: CMakeLists.txt
apps/libs/imgui/: CMakeLists.txt
apps/libs/nlohmann_json/: CMakeLists.txt
apps/opengl_framework/include/opengl_framework/: APIConfig.h  RenderBufferObject.h
apps/opengl_framework/src/: FrameBufferObject.cpp
apps/stb/: CMakeLists.txt
apps/viewer/: AxesRenderer.cpp  AxesRenderer.h  BlendedMotion.h  CMakeLists.txt  Context.cpp  Context.h  GridRenderer.cpp  GridRenderer.h  InfiniteGridRenderer.cpp  InfiniteGridRenderer.h  JsonParser.hpp  ModelRenderer.cpp  ModelRenderer.h  PathConv.h  Profiler.h  SharedToonTextures.inl  SimpleAnimator.h  Viewer.cpp  Viewer.h  main.cpp
cmake/: glmmdConfig.cmake.in
include/glmmd/core/: Animator.h  Camera.h  CameraMotion.h  DirectionalLight.h  FixedMotionClip.h  FixedPoseMotion.h  InterpolationCurve.h  Lighting.h  Model.h  ModelData.h  ModelPhysics.h  ModelPose.h  ModelPoseSolver.h  ModelRenderData.h  Motion.h  MotionClip.h  ParallelForEach.h  PhysicsWorld.h  RenderData.h  SimpleAnimator.h  Transform.h
include/glmmd/files/: CodeConverter.h  ObjFileDumper.h  PmxFileDumper.h  PmxFileLoader.h  VmdData.h  VmdFileLoader.h  VpdData.h  VpdFileLoader.h
include/glmmd/render/: Camera.h  Lighting.h  ModelRenderer.h
lib/: CMakeLists.txt
lib/opengl_framework/: CMakeLists.txt
lib/opengl_framework/include/opengl_framework/: VertexArrayObject.h
lib/stb/: CMakeLists.txt
lib/stb/cmake/: stbConfig.cmake.in
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/opengl_framework/: CMakeLists.txt
libs/opengl_framework/include/opengl_framework/: Common.h  FrameBufferObject.h  IndexBufferObject.h  RenderBufferObject.h  Shader.h  Texture2D.h  VertexArrayObject.h  VertexBufferObject.h
libs/opengl_framework/src/: FrameBufferObject.cpp  IndexBufferObject.cpp  RenderBufferObject.cpp  Shader.cpp  Texture2D.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
opengl_framework/: CMakeLists.txt
src/: CMakeLists.txt
src/core/: Animator.cpp  CMakeLists.txt  Camera.cpp  CameraMotion.cpp  DirectionalLight.cpp  FixedMotionClip.cpp  InterpolationCurve.cpp  Lighting.cpp  Model.cpp  ModelData.cpp  ModelPose.cpp  ModelPoseSolver.cpp  ModelRenderData.cpp  PhysicsWorld.cpp  RenderData.cpp
src/files/: CMakeLists.txt  CodeConverter.cpp  ObjFileDumper.cpp  PmxFileDumper.cpp  PmxFileLoader.cpp  ShiftJIS_convTable.inl  VmdData.cpp  VmdFileLoader.cpp  VpdData.cpp  VpdFileLoader.cpp
src/render/: CMakeLists.txt  Camera.cpp  DefaultShaderSources.inl  Lighting.cpp  ModelRenderer.cpp  SharedToonTextures.inl
